Small adjustments to description and application
